# argumentor

./: .gitignore  ExampleAdvanced.py  ExampleBeginner.py  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
Argumentor/: Argument.py  ArgumentValidation.py  Argumentor.py  BoolFlag.py  Command.py  Flag.py  Result.py  ResultDto.py  ValidationDto.py  __init__.py
src/Argumentor/: Argument.py  ArgumentValidation.py  Argumentor.py  Command.py  Flag.py  Result.py  __init__.py
tests/: ArgumentorTests.py  ExampleAdvanced.py  ExampleBasic.py
tests/UnitTests/: ArgumentorTests.py
tests/enums/: CommandHitValues.py  Measurement.py
tests/examples/: ExampleAdvanced.py  ExampleBeginner.py
