[project]
name = "Argumentor"
version = "0.0.1"
authors = [
  { name="Gardehal", email="alethogar@protonmail.com" },
]
description = "Command and argument parsing for Python CLI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gardehal/argumentor"