[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argumentor_gardehal"
dynamic = ["version", "dependencies"]
description = "CLI argument parsing, validation, documentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Gardehal"}]
dependencies = {file = ["requirements.txt"]}